tests/ui/issues/issue-2590.stderr
error[E0507]: cannot move out of `self.tokens` which is behind a shared reference
  --> $DIR/issue-2590.rs:11:9
   |
LL |         self.tokens
   |         ^^^^^^^^^^^ move occurs because `self.tokens` has type `Vec<isize>`, which does not implement the `Copy` trait
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |         self.tokens.clone()
   |                    ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
